/*
Copyright 2021 The Dapr Authors
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
    http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
syntax = "proto3";

package dapr.proto.components.v1;

import "google/protobuf/empty.proto";
import "dapr/proto/common/v1/common.proto";
import "dapr/proto/components/v1/shared.proto";

option go_package = "github.com/dapr/dapr/pkg/proto/components/v1;components";

// Store service provides a gRPC interface for state store components.
service PubSub {
  rpc Init(MetadataRequest) returns (google.protobuf.Empty) {}

  rpc Features(google.protobuf.Empty) returns (FeaturesResponse) {}

  rpc Publish(PublishRequest) returns (google.protobuf.Empty) {}

  rpc Subscribe(SubscribeRequest) returns (stream NewMessage) {}

}

message PublishRequest {
  bytes data = 1; 
  string pubsubname = 2; 
  string topic = 3; 
  map<string, string> metadata = 4;
  string contenttype = 5; 
}

message SubscribeRequest {
  string topic = 1;
  map<string, string> metadata = 2;
}

message NewMessage {
  bytes data = 1; 
  string topic = 2; 
  map<string, string> metadata = 3;
  string contenttype = 4; 
}
